--- a/HappyWomen-sDay-master/love/love.html
+++ b/HappyWomen-sDay-master/love/love.html
@@ -21,43 +21,43 @@
             <div class="boxSlider">
                     <div class="listSlider">
                         <div class="slider">
-                            <img src="../image/q.jpg" alt="">
+                            <img src="../image/love3.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/w.jpg" alt="">
+                            <img src="../image/love4.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/e.jpg" alt="">
+                            <img src="../image/love5.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/r.jpg" alt="">
+                            <img src="../image/love6.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/t.jpg" alt="">
+                            <img src="../image/love7.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/y.jpg" alt="">
+                            <img src="../image/love8.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/u.jpg" alt="">
+                            <img src="../image/love9.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/i.jpg" alt="">
+                            <img src="../image/love10.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/o.jpg" alt="">
+                            <img src="../image/love11.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/a.jpg" alt="">
+                            <img src="../image/love12.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/s.jpg" alt="">
+                            <img src="../image/love13.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/d.jpg" alt="">
+                            <img src="../image/love14.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/f.jpg" alt="">
+                            <img src="../image/love15.png" alt="">
                         </div>
                     </div>
                 <div class="left">
