--- a/love/love.html
+++ b/love/love.html
@@ -149,10 +149,6 @@
         </div>
     </div>
 
-<audio id="bgm" loop>
-    <source src="../music/nhac.mp3" type="audio/mpeg">
-</audio>
-
 <audio id="bgm" src="music/nhac.mp3" loop></audio>
 
 <script>
@@ -160,7 +156,9 @@ window.addEventListener("load", function(){
     const audio = document.getElementById("bgm");
 
     document.addEventListener("click", function () {
-        audio.play();
+        audio.play().then(() => {
+            console.log("play ok");
+        }).catch(err => console.log(err));
     }, { once: true });
 });
 </script>
