--- a/love/love.html
+++ b/love/love.html
@@ -375,7 +375,7 @@
                         img.style.left = left + "%";
                         img.style.transform = `rotate(${rotate}deg)`;
                         img.querySelector("img").style.width = size + "px";
-                        
+
                         setTimeout(()=>{
                             img.style.top = "100%";
                         },50);
@@ -401,4 +401,8 @@
         $(".wrapperLetterForm").fadeOut()
     })
 </script>
+
+<script src="app.js"></script>
+
+</body>
 </html>
