--- a/love/love.html
+++ b/love/love.html
@@ -346,19 +346,19 @@
                         img.className = "imgRain";
 
                         let images = [
-                            "image/love3.jpg",
-                            "image/love4.jpg",
-                            "image/love5.jpg",
-                            "image/love6.jpg",
-                            "image/love7.jpg",
-                            "image/love8.jpg",
-                            "image/love9.jpg",
-                            "image/love10.jpg",
-                            "image/love11.jpg",
-                            "image/love12.jpg",
-                            "image/love13.jpg",
-                            "image/love14.jpg",
-                            "image/love15.jpg",
+                            "../image/love3.jpg",
+                            "../image/love4.jpg",
+                            "../image/love5.jpg",
+                            "../image/love6.jpg",
+                            "../image/love7.jpg",
+                            "../image/love8.jpg",
+                            "../image/love9.jpg",
+                            "../image/love10.jpg",
+                            "../image/love11.jpg",
+                            "../image/love12.jpg",
+                            "../image/love13.jpg",
+                            "../image/love14.jpg",
+                            "../image/love15.jpg",
 
                         ];
 
@@ -384,7 +384,7 @@
                             img.remove();
                         },5000);
 
-                    },400);
+                    },1400);
 
                     // ===== KẾT THÚC ẢNH RƠI =====
                 })
