--- a/love/love.html
+++ b/love/love.html
@@ -24,43 +24,43 @@
             <div class="boxSlider">
                     <div class="listSlider">
                         <div class="slider">
-                            <img src="image/love3.jpg" alt="">
+                            <img src="image/love3.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="image/love4.jpg" alt="">
+                            <img src="image/love4.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="image/love5.jpg" alt="">
+                            <img src="image/love5.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="image/love6.jpg" alt="">
+                            <img src="image/love6.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="image/love7.jpg" alt="">
+                            <img src="image/love7.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="image/love8.jpg" alt="">
+                            <img src="image/love8.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="image/love9.jpg" alt="">
+                            <img src="image/love9.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love10.jpg" alt="">
+                            <img src="../image/love10.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love11.jpg" alt="">
+                            <img src="../image/love11.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love12.jpg" alt="">
+                            <img src="../image/love12.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love13.jpg" alt="">
+                            <img src="../image/love13.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love14.jpg" alt="">
+                            <img src="../image/love14.png" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/love15.jpg" alt="">
+                            <img src="../image/love15.png" alt="">
                         </div>
                     </div>
                 <div class="left">
